k8s (copier 1)/mtls/destination-rule-mtls.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cineapi-destination
  namespace: default
spec:
  host: cineapi.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mysql-destination
  namespace: default
spec:
  host: mysql.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
